--- a/style.css
+++ b/style.css
@@ -120,10 +120,9 @@ iframe {
 }
 
 img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   display: inline-block;
-  float: left;
   margin-bottom: 2%;
   margin-right: 2%;
 }
